# jira-utils

./: CLAUDE.md  README.md  config.example.json  pyproject.toml  setup.py
.github/workflows/: security.yml
jira_utils/: __init__.py  cli.py  config.py  jira_client.py  state.py
jira_utils_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_live_search.py
